// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio test should errored with disabled classes 1`] = `
<div>
  <label
    class="sc-eDvSVe cIHxS"
  >
    <div
      class="sc-jSUZER eNJiMC"
    >
      <input
        class="peer hidden"
        type="radio"
        value=""
      />
      <div
        class="sc-gKPRtg ezeWRj"
      />
      <div
        class="sc-iBYQkv cFoOhr"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Radio test should render 1`] = `
<div>
  <label
    class="sc-eDvSVe cIHxS"
  >
    <div
      class="sc-jSUZER bPLnxV"
    >
      <input
        class="peer hidden"
        type="radio"
        value=""
      />
      <div
        class="sc-gKPRtg hEprCf"
      />
      <div
        class="sc-iBYQkv dKohrg"
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;

exports[`Radio test should render with disabled classes 1`] = `
<div>
  <label
    class="sc-eDvSVe ZXIxN"
    disabled=""
  >
    <div
      class="sc-jSUZER bPLnxV"
    >
      <input
        class="peer hidden"
        disabled=""
        type="radio"
        value=""
      />
      <div
        class="sc-gKPRtg fCxYfH"
        disabled=""
      />
      <div
        class="sc-iBYQkv fbmVPj"
        disabled=""
      >
        <svg
          fill="currentColor"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="8"
            cy="8"
            r="3"
          />
        </svg>
      </div>
    </div>
  </label>
</div>
`;
